tests/expectations/compiler/error_reporting/error_labels.out
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:4:9
     |
   3 |           x: u32,
     |           ^^^^^^ `x` first declared here
   4 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:10:9
     |
   8 |           x: u32,
     |           ^^^^^^ `x` first declared here
   9 |
  10 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:17:9
     |
  14 |           x: u32,
     |           ^^^^^^ `x` first declared here
   ...
  17 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:24:9
     |
  21 | /         x
  22 | |             : 
  23 | |                 u32,
     | |___________________- `x` first declared here
  24 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:32:9
     |
  28 | /         x
  29 | |             : 
  30 | |                 u32,
     | |___________________- `x` first declared here
  31 |
  32 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:41:9
     |
  36 | /         x
  37 | |             : 
  38 | |                 u32,
     | |___________________- `x` first declared here
   ...
  41 |           x: u32
     |           ^^^^^^ struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:48:9
     |
  45 | /         x
  46 | |             : 
  47 | |                 u32,
     | |___________________- `x` first declared here
  48 | /         x
  49 | |              : 
  50 | |                     u32
     | |_______________________- struct field already declared
Error [ETYC0372015]: Struct field `x` is already declared.
    --> compiler-test:60:9
     |
  54 | /         x
  55 | |             : 
  56 | |                 u32,
     | |___________________- `x` first declared here
   ...
  60 | /         x
  61 | |                  : 
  62 | |                      u32
     | |________________________- struct field already declared
